--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,6 @@ azure-mgmt-network==17.0.0
 azure-identity==1.5.0
 pycairo==1.20.0
 PyGObject==3.38.0
+
+google-api-python-client==1.12.8
+#google-cloud-compute==0.1.0
